--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tulip",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:rinsuki/tulip.git",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "lint": "tslint 'src/*.ts' 'src/**/*.ts'"
+    "lint": "tslint 'src/*.ts' 'src/**/*.ts'",
+    "start": "node ./dist/index"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
